# dolfinx-external-operator

./: .gitignore  LICENSE  NOTES.md  README.md  demo  pyproject.toml  requirements.txt  test_nested_ex_op.py
.github/workflows/: build-and-test.yml  build-docs.yml  build_docs.yml  publish-docs.yml  publish.yml  push-docs.yml  pypi.yml  pythonapp.yml
benchmarking/: benchmarking.py  benchmarking_analysis.ipynb
demo/: demo_nonlinear_heat_equation_part3.py
doc/: _config.yml  _toc.yml  conf.py  index.md~HEAD  references.bib
doc/demo/: ArrudaBoyce_noise=high.pth  FAQ.md  Isihara_noise=high.pth  demo_hyperelasticity.py  demo_nonlinear_heat_equation_part1.py  demo_nonlinear_heat_equation_part2.py  demo_plasticity_mohr_coulomb.ipynb  demo_plasticity_mohr_coulomb.py  demo_plasticity_mohr_coulomb_mpi.py  demo_plasticity_rankine.py  demo_plasticity_von_mises.py  demo_plasticity_von_mises_pure_ufl.py  demo_simple_example.py  math.md  nn.ipynb  run_all_demos.sh  run_all_on_kutta.sh  run_demo.sh  run_demo_100.sh  run_demo_200.sh  run_demo_50.sh  solvers.py  utilities.py
doc/notes/: FAQ.md  notation.md
docs/: _config.yml  _toc.yml  conf.py  index.md  intro.md  references.bib
docs/demo/: demo_nonlinear_heat_equation_part1.py  demo_nonlinear_heat_equation_part2.py  demo_plasticity_mohr_coulomb.py  demo_plasticity_von_mises.py  demo_plasticity_von_mises_pure_ufl.py  test_demos.py  utilities.py  von_mises_ufl.py
docs/demos/: benchmarking_analysis.ipynb  demo_nonlinear_heat_equation_part1.py  limit_analysis.py  limit_analysis_2.py  limiy_analysis_plasticity.py  nonlinear_heat_equation.ipynb  nonlinear_heat_equation.py  nonlinear_heat_equation_part1.ipynb  nonlinear_heat_equation_part1.py  nonlinear_heat_equation_part2.ipynb  nonlinear_heat_equation_part2.py  nonlinear_heat_equation_part3.py  plasticity_mohr_coulomb.ipynb  plasticity_mohr_coulomb.py  plasticity_von_Mises.py  plasticity_von_mises.py  plasticity_von_mises_pure_ufl.py  simple_example.ipynb  simple_example.md  simple_example.py  simple_example_implementation.ipynb  simple_example_implementation.py  slope_stability.py  solvers.py  test.ipynb  test.py  utilities.py
dolfinx_ExternalOperator/: external_operator.py
dolfinx_external_operator/: __init__.py  external_operator.py
jax-gpu/: analysis.ipynb  benchmark.py  constitutive_model.py  jax-gpu.py  jax-gpu.sh  jax-playground.ipynb  main_launcher.sh  main_launcher_bash.sh  notes.md  pmap_cookbook.py
jax-gpu/launchers/: distributed_jax.py  distributed_jax_several_hosts.py  launcher_distributed_jax.sh  launcher_distributed_jax_several_cores.sh  launcher_distributed_jax_several_hosts.sh  launcher_jax_gpu.sh  launcher_jax_multithreading.sh  launcher_standard.sh  standard.py
jax-gpu/src/: benchmark.py  constitutive_model.py
jax-gpu/tests/: distributed_jax.py  distributed_jax_several_hosts.py  jax_gpu.py  jax_multithreading.py  (+1 more)
test/: conftest.py  test_codim_external_operator.py  test_dimensions.py  test_external_evaluation.py  test_external_operators.py  test_external_operators_construction.py  test_external_operators_evaluation.py  test_multiaction.py  test_nested_ex_op.py  test_operands_evaluation.py  test_operator_evaluation.py
tests/: simple_tests_playground.ipynb  test_codim_external_operator.py  test_dimensions.py  tests.py
(+7 files in other folders)
