[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "pip>=23.1"]

[project]
name = "dolfinx_ExternalOperator"
version = "0.8.0"
description = "Extention of ufl.ExternalOperator"
authors = [
    { name = "Andrey Latyshev", email = "andrey.latyshev@uni.lu" },
    { name = "Jeremy Bleyer", email = "jeremy.bleyer@enpc.fr" },
    { name = "Jack S. Hale", email = "jack.hale@uni.lu" },
    { name = "Corrado Maurini", email = "corrado.maurini@sorbonne-universite.fr" },
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "fenics-dolfinx==0.8.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter-book",
    "jupytext",
    "jupyterlab",
]
