[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "pip>=23.1"]

[project]
name = "dolfinx-external-operator"
version = "0.8.0.dev0"
description = "An implementation of ufl.ExternalOperator for DOLFINx"
authors = [
    { name = "Andrey Latyshev", email = "andrey.latyshev@uni.lu" },
    { name = "Jack S. Hale", email = "jack.hale@uni.lu" },
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "fenics-dolfinx>=0.8.0.dev0,<0.9.0",
    "fenics-ufl>=2023.3.0.dev0,<2023.4.0",
]

[project.optional-dependencies]
docs = [
    "jupyter-book",
    "jupytext"
]
demos = [
    "numba",
    "jax"
]
lint = [
    "ruff"
]
ci = [
    "dolfinx-external-operator[docs]",
    "dolfinx-external-operator[demos]",
    "dolfinx-external-operator[lint]"
]
